Fixed list spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -85,7 +85,7 @@ p {
 
 ul,
 ol {
-  margin-left: 30px;
+  margin: 1rem 0 1rem 30px;
 }
 
 li {
@@ -176,7 +176,7 @@ footer a {
 }
 
 blockquote {
-  margin: 0 0 1.5rem 0;
+  margin: 1.5rem 0;
   border-left: 16px solid $lightgrey;
   padding: 0.5rem 1.5rem;
   font-size: $size3;
